Fixed button alignment issue on user sign-in page

--- a/src/index.css
+++ b/src/index.css
@@ -97,11 +97,16 @@ button:hover {
 /* SignIn Form */
 
 .form {
-  margin-left: 10%;
   margin-top: 7%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+}
+
+.wrap {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
 }
 
 .wrapper {
@@ -111,20 +116,20 @@ button:hover {
 }
 
 .inputField {
-  padding: 0.9rem 0.6rem 0.6rem;
-  width: 63%;
+  padding: 1rem 0.6rem 0.7rem;
+  width: 24rem;
   margin-left: 1.4rem;
   margin-bottom: 0.3rem;
   border-radius: 0.4rem;
   border: none;
+  box-sizing: border-box;
 }
 
 .auth {
-  width: 66%;
-  align-self: center;
+  width: 100%;
   display: block;
-  margin-bottom: 5%;
-  padding: 0.5rem 0rem;
+  margin-bottom: 6%;
+  padding: 0.7rem 0rem;
   background-color: #09cc5c;
   color: #ffffff;
   border: none;
@@ -132,9 +137,12 @@ button:hover {
   font-size: 0.9rem;
 }
 
+.auth-wrap {
+  align-self: flex-end;
+  width: 24rem;
+}
+
 .auth-other {
-  width: 59%;
-  margin-left: 9rem;
   margin-bottom: 2.3rem;
   display: flex;
   flex-direction: row;
